--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -384,7 +384,7 @@
                </tabs>
             </TabPane>
          </top>
-         <right>
+         <center>
             <TableView fx:id="table_requirements" editable="true" prefHeight="423.0" prefWidth="1000.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
                <columns>
                   <TableColumn fx:id="tableColumn_csc" onEditCommit="#saveRowEditChanges" prefWidth="95.0" text="CSC" />
@@ -394,19 +394,19 @@
                   <TableColumn fx:id="tableColumn_baseline" editable="false" onEditCommit="#saveRowEditChanges" prefWidth="100.0" text="Baseline" />
                   <TableColumn fx:id="tableColumn_scicr" onEditCommit="#saveRowEditChanges" prefWidth="100.0" text="SC/ICR" />
                   <TableColumn fx:id="tableColumn_capability" onEditCommit="#saveRowEditChanges" prefWidth="100.0" text="Capability" />
-                  <TableColumn fx:id="tableColumn_add" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="55.0" text="# Added" />
-                  <TableColumn fx:id="tableColumn_change" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="55.0" text="# Changed" />
-                  <TableColumn fx:id="tableColumn_delete" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="55.0" text="# Deleted" />
-                  <TableColumn fx:id="tableColumn_designWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="55.0" text="Design Weight" />
-                  <TableColumn fx:id="tableColumn_codeWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="55.0" text="Code Weight" />
-                  <TableColumn fx:id="tableColumn_unitTestWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="55.0" text="Unit Test Weight" />
-                  <TableColumn fx:id="tableColumn_integrationWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="55.0" text="Integration Weight" />
-                  <TableColumn fx:id="tableColumn_ri" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="Responsible Individual" />
+                  <TableColumn fx:id="tableColumn_add" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="# Added" />
+                  <TableColumn fx:id="tableColumn_change" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="# Changed" />
+                  <TableColumn fx:id="tableColumn_delete" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="# Deleted" />
+                  <TableColumn fx:id="tableColumn_designWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="Design Weight" />
+                  <TableColumn fx:id="tableColumn_codeWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="Code Weight" />
+                  <TableColumn fx:id="tableColumn_unitTestWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="Unit Test Weight" />
+                  <TableColumn fx:id="tableColumn_integrationWeight" minWidth="0.0" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="Integration Weight" />
+                  <TableColumn fx:id="tableColumn_ri" onEditCommit="#saveRowEditChanges" prefWidth="140.0" text="Responsible Individual" />
                   <TableColumn fx:id="tableColumn_rommer" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="Rommer" />
                   <TableColumn fx:id="tableColumn_program" onEditCommit="#saveRowEditChanges" prefWidth="120.0" text="Program" />
                </columns>
             </TableView>
-         </right>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
